correction z-index for future icon heart

--- a/client/src/style/animationCircle.css
+++ b/client/src/style/animationCircle.css
@@ -8,6 +8,10 @@
   height: 500px;
 }
 
+.circle-1 {
+  z-index: 1;
+}
+
 .circle1__Stroke {
   position: absolute;
   top: 0;
@@ -23,7 +27,6 @@
   width: 235px;
   height: 235px;
   border-radius: 50%;
-  z-index: -1;
 }
 
 .animationCircles {
